--- a/redsheet-portal/src/app/components/project/projects/list/project-list.component.html
+++ b/redsheet-portal/src/app/components/project/projects/list/project-list.component.html
@@ -213,7 +213,7 @@
                                     </div>
                                     
                                     <span class="alert-recent mr-1 activebtn"
-                                        *ngIf="!dataItem.projectStatus && !dataItem.isClosed && dataItem.myRole == 'Owner' && myRole != 'Shared project'">
+                                        *ngIf="!dataItem.projectStatus && !dataItem.isClosed && dataItem.myRole == 'Owner' && dataItem.myRole != 'Shared project'"><!-- myRole != 'Shared project' -->
                                         Active</span>
                                     <span class="alert-recent mr-1 closebtn"
                                         *ngIf="dataItem.isClosed && dataItem.myRole == 'Owner'">
