--- a/redsheet-portal/src/assets/css/custom.css
+++ b/redsheet-portal/src/assets/css/custom.css
@@ -593,6 +593,12 @@ header {
   .section-box .section-body {
     clear: both; }
 
+  /* to hide scroll-bar */
+  .section-box::-webkit-scrollbar {
+      display: none;
+  }
+  /* */
+
 /*========= custom list ==========*/
 .custom-list {
   padding: 0;
