--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -235,7 +235,7 @@
                                                 class="color-dark-gray">{{dataItem.moduleOrder}}</span></p>
                                     </div>
                                     <span class="alert-recent mr-1 activebtn"
-                                        *ngIf="!dataItem.projectStatus && !dataItem.isClosed && dataItem.myRole == 'Owner' && dataItem.myRole != 'Shared project'"> <!-- (myRole != 'Shared project') TO (dataItem.myRole != 'Shared project') -->
+                                        *ngIf="!dataItem.projectStatus && !dataItem.isClosed && dataItem.myRole == 'Owner' && myRole != 'Shared project'">
                                         Active</span>
                                     <span class="alert-recent mr-1 closebtn"
                                         *ngIf="dataItem.isClosed && dataItem.myRole == 'Owner'">
