Uttam : WebApp : chages in search , filter UI

--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
                                     <li><h6>{{recentActivity.RecentActivityName}}</h6></li>
                                 </ul> -->
                                 </div>
-                                <div class="section-footer text-right" *ngIf="emailTransactions">
+                                <div class="section-footer text-right" > <!-- *ngIf="emailTransactions" -->
                                     <a class="btn btn-info" (click)="navigateTo('email-transaction')"
                                         title="Read More"><i class="fa fa-angle-double-right fa-lg"></i></a>
                                 </div>
