--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -18,17 +18,17 @@
                                 <div class="section-header">
                                     <h2 class="section-title" Uppercase>Messages</h2> <!-- rxLabel="headingOne" -->
                                 </div>
-                                <div class="section-body" *ngIf="emailTransactions" >
+                                <div class="section-body"  > <!-- *ngIf="emailTransactions" -->
                                     <ul class="m-0 p-0">  <!-- class="custom-list dashboard-list" -->
-                                        <li  class="my-1" *ngFor="let emailTransaction of emailTransactions" type="none">
-                                             <span><span class="mr-2"><img src="../../../assets/images/create-report.svg" width="25px;" height="50px;" alt="email"></span><span><span class="font-weight-bold"></span>{{emailTransaction.EmailSubject | uppercase}}<span class="ml-1 mr-2">|</span><span class="truncate text-muted"><p>{{emailTransaction.EmailMessage}}</p></span></span></span>
-                                        </li>  <!-- [appHtml]="emailTransaction.emailSubject" --> -->
+                                        <li  class="my-1" > <!-- *ngFor="let emailTransaction of emailTransactions" type="none" -->
+                                             <span class="truncated"><span class="mr-2"><img src="../../../assets/images/create-report.svg" width="25px;" height="50px;" alt="email"></span><span><span class="font-weight-bold">{{"emailTransactionEmailSubject" | uppercase}}</span><span class="ml-1 mr-2">|</span><span class="text-muted">{{"emailTransaction.EmailMessage"}}{{"emailTransaction.EmailMessage"}}{{"emailTransaction.EmailMessage"}}{{"emailTransaction.EmailMessage"}}</span></span></span>
+                                        </li>  <!-- [appHtml]="emailTransaction.emailSubject" --> 
                                     </ul>
                                             <!-- <ul class="custom-list" *ngFor="let recentActivity of recentActivities">
                                     <li><h6>{{recentActivity.RecentActivityName}}</h6></li>
                                 </ul> -->
                                 </div>
-                                <div class="section-footer text-right" *ngIf="emailTransactions">
+                                <div class="section-footer text-right" > <!-- *ngIf="emailTransactions" -->
                                     <a class="btn btn-info" (click)="navigateTo('email-transaction')"
                                         title="Read More"><i class="fa fa-angle-double-right fa-lg"></i></a>
                                 </div>
