--- a/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
+++ b/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
@@ -3,42 +3,25 @@
     <div class="row justify-content-center">
         <div class="col-12 col-lg-12 col-xl-10">
       <h1 class="page-heading mt-3">Messaging</h1>
-        <!-- <div class="container-fluid m-0 p-0 row d-flex flex-wrap">
-            <div class="mr-3 m-0 p-0">
-                <label><span class="h2">SEARCH</span> <input class="p-2 h4" id="search" type="text" style="background-color:white; border:1px rgba(128, 128, 128, 0.295); border-radius: 5px; border-style:solid; outline: none;"></label>
-                
-            </div>
-            <div class="ml-3 m-0 p-0">
-                <label><span class="h2">FILTER</span>
-                <select class="p-2 h4" id="filter" style="background-color:rgba(207, 206, 206, 0.39); border:1px rgba(128, 128, 128, 0.295); border-radius: 5px; border-style:solid; outline: none;">
-                    <option class="py-1 px-5" style="background-color: rgba(207, 206, 206, 0.39);" *ngFor="let filter of filterOption" value="{{filter}}">{{filter}}</option>
-                </select></label>
-                <button class="p-2 h4" style="background-color:rgba(207, 206, 206, 0.39); border:1px rgba(128, 128, 128, 0.295); border-radius: 5px; border-style:solid; outline: none;">
-                    <p class="m-0 p-0 row d-flex align-items-center">{{dateOrder}}<span style="font-size:15px;" class="ml-2 p-0 d-flex flex-column flex-wrap"><i class="m-0 p-0 fa fa-caret-up"></i><i class="m-0 p-0 fa fa-caret-down"></i></span></p>
-                </button>
-                <button class="p-2 h4" style="background-color:rgba(207, 206, 206, 0.39); border:1px rgba(128, 128, 128, 0.295); border-radius: 5px; border-style:solid; outline: none;">
-                    <p>RESET FILTER</p>
-                </button>
-            </div>
-        </div> -->
-        <div class="">         
+
+        <div class="container-fluid">         
             <div class="section-body">
-                <div class="row justify-content-around align-items-center section-form-row">                        
-                        <div class="row col-sm-12 col-md-12 col-lg-4 justify-content-start align-items-center">                                
-                            <label for="project-name" class="col-sm-2 col-md-2 col-lg-auto h2">Search</label>
-                            <input type="text" class="form-control col-sm-8 col-md-8 col-lg-8 bg-white rounded" placeholder="Text here..">    
+                <div class="row justify-content-between align-items-center">                        
+                        <div class="my-1 row col-sm-12 col-md-12 col-lg-4 justify-content-start align-items-center">                                
+                            <label for="project-name" class="my-1 col-sm-auto col-md-2 col-lg-auto h2">Search</label>
+                            <input type="text" class="my-1 form-control col-sm-7 col-md-8 col-lg-7" placeholder="Text here..">    
                         </div>
-                        <div class="row col-sm-12 col-md-12 col-lg-8 justify-content-end align-items-center">   
-                            <label for="project-name" class="m-0 p-2 col-sm-1 col-md-1 col-lg-1 h2">Filter</label>
-                            <div class="col-sm-11 col-md-11 col-lg-11 row justify-content-around">
-                                <div class="col-12 row justify-content-around">
-                                    <select class="form-control rounded col-sm-3 col-md-3 col-lg-3">
+                        <div class="my-1 row col-sm-12 col-md-12 col-lg-8 justify-content-center align-items-center">   
+                            <label for="project-name" class="my-1 col-sm-auto col-md-auto col-lg-auto h2">Filter</label>
+                            <div class="col-sm-10 col-md-10 col-lg-10 row justify-content-around">
+                                <div class="col-12 row justify-content-around d-flex flex-wrap float-right">
+                                    <select class="my-1 form-control col-sm-3 col-md-3 col-lg-3">
                                         <option *ngFor="let filter of filterOption" value="{{filter}}">{{filter}}</option>
                                     </select>
-                                    <button type="button" name="last-modified" class="m-0 p-0 form-control btn btn-info rounded col-sm-4 col-md-4 col-lg-4 " (click)="DateOrder()">
-                                        <p class="m-0 p-2 row d-flex justify-content-center align-items-center">{{dateOrder}} <span class="m-0 ml-4 p-0 d-flex flex-column"><i class="m-0 p-0 fa fa-caret-up"></i><i class="m-0 p-0 fa fa-caret-down"></i></span></p>
+                                    <button type="button" name="last-modified" class="my-1 p-0 form-control btn btn-info col-sm-4 col-md-4 col-lg-4 " (click)="DateOrder()">
+                                        <p class="m-0 p-0 row d-flex justify-content-center align-items-center">{{dateOrder}} <span class="ml-4 m-0 p-0 d-flex flex-column"><i class="m-0 p-0 fa fa-caret-up"></i><i class="m-0 p-0 fa fa-caret-down"></i></span></p>
                                     </button>
-                                    <button type="button" name="last-modified" class="btn btn-info rounded form-control btn-info col-sm-4 col-md-4 col-lg-4">
+                                    <button type="button" name="last-modified" class="my-1 btn btn-info form-control col-sm-4 col-md-4 col-lg-4">
                                         Reset Filter
                                     <!-- <i [class]="sortClass" aria-hidden="true"></i> -->
                                 </button>
@@ -48,19 +31,48 @@
                 </div>
             </div>
         </div>
-            <div class="section-box">
-                <div class="section-body">
-                        <rx-template #templateEvent="rxtemplate" [(dataSource)]="emailTransaction" pageSize="10" masterClass="col-12 col-lg-12 col-xl-12">
-                                <ng-template rxCellTemplate let-dataItem="dataItem" let-rowIndex="rowIndex">
-                <ul class="custom-list dashboard-list" >
-                            <!-- class="border-bottom" 
-                        <li>{{dataItem.RecentActivityName}}</li>  -->
-                        <li [appHtml]="dataItem.EmailSubject"></li>
-                    </ul>
-                    </ng-template>
+        
+        <div class="section-box">
+            <div class="section-body">
+                    <rx-template #templateEvent="rxtemplate" [(dataSource)]="emailTransaction" pageSize="5"
+                        masterClass="col-12 col-lg-12 col-xl-12">
+                        <ng-template rxCellTemplate let-dataItem="dataItem" let-rowIndex="rowIndex">
+                            <ul> <!-- custom-list dashboard-list -->
+                                <li class="my-1" type="none">
+                                    <div class="section-body p-1">
+                                        <div class="page-heading">
+                                            <div class="sub-heading">
+                                                <div class="action-links d-flex flex-wrap "> <!--m-0 p-0 col-lg-6 col-xsm-12 justify-content-end -->
+                                                    <span class="h5">
+                                                        <span><span class="text-muted">{{dataItem.UpdatedOn}}</span></span>
+                                                        <span class="ml-2 mr-2 text-muted">|</span>
+                                                        <span class="text-muted">SENT</span>
+                                                        <span *ngIf="dataItem.EmailTo=='John Pattinson'" class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-received.svg" width="20px" height="20px" alt=""></span>
+                                                        <span *ngIf="dataItem.EmailFrom=='John Pattinson'" class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-sent.svg" width="20px" height="20px" alt=""></span>
+                                                        <span type="button" *ngIf="dataItem.EmailTo=='John Pattinson' && dataItem.EmailFrom!='Sytem'" class="ml-2 mb-2 py-0 btn btn-info btn-sm">Reply</span>
+                                                    </span>
+                                                </div>
+                                                <div class="d-flex flex-wrap"> <!--m-0 p-0 col-lg-6 col-xsm-12 justify-content-start -->
+                                                    <span class="h3"><span>SUBJECT: </span><span class="text-muted">{{dataItem.EmailSubject}}</span></span>
+                                                    <span class="ml-2 mr-2 h3 text-muted">|</span>
+                                                    <span class="h3" *ngIf="dataItem.EmailFrom=='John Pattinson'"><span>TO: </span><span class=" text-muted">{{dataItem.EmailTo}}</span></span>
+                                                    <span class="h3" *ngIf="dataItem.EmailTo=='John Pattinson'"><span>FROM: </span><span class=" text-muted">{{dataItem.EmailFrom}}</span></span>
+                                                    <!-- <span class="h3"><span class="font-weight-bold ">TO: </span><span class=" text-muted">{{dataItem.EmailTo}}</span></span> -->
+                                                </div>
+    
+                                            </div>
+                                        </div>
+                                        <div class="section-body m-0 p-0">
+                                            <p class="m-0 p-0">{{dataItem.EmailMessage}}</p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>                            
+                        </ng-template>
                     </rx-template>
-                </div>
-              </div>
-          </div>
+
+            </div>
+            </div>
+        </div>
       </div>
   </div>
