--- a/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
+++ b/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
@@ -9,19 +9,20 @@
                 <div class="row justify-content-between align-items-center">                        
                         <div class="my-1 row col-sm-12 col-md-12 col-lg-4 justify-content-start align-items-center">                                
                             <label for="project-name" class="my-1 col-sm-auto col-md-2 col-lg-auto h2">Search</label>
-                            <input type="text" class="my-1 form-control col-sm-7 col-md-8 col-lg-7" placeholder="Text here..">    
+                            <input type="text" class="my-1 form-control col-sm-7 col-md-8 col-lg-7" placeholder="Text here.." [(ngModel)]="searchValue" (keyup)="SearchEmailTransaction()">    
                         </div>
                         <div class="my-1 row col-sm-12 col-md-12 col-lg-8 justify-content-center align-items-center">   
                             <label for="project-name" class="my-1 col-sm-auto col-md-auto col-lg-auto h2">Filter</label>
                             <div class="col-sm-10 col-md-10 col-lg-10 row justify-content-around">
                                 <div class="col-12 row justify-content-around d-flex flex-wrap float-right">
-                                    <select class="my-1 form-control col-sm-3 col-md-3 col-lg-3">
-                                        <option *ngFor="let filter of filterOption" value="{{filter}}">{{filter}}</option>
+                                    <select class="my-1 form-control col-sm-3 col-md-3 col-lg-3" [(ngModel)]="emailCategoryValue" (change)="CategoryEmailTransaction()">
+                                        <option value=""></option>
+                                        <option *ngFor="let filter of emailCategory" value="{{filter}}">{{filter}}</option>
                                     </select>
-                                    <button type="button" name="last-modified" class="my-1 p-0 form-control btn btn-info col-sm-4 col-md-4 col-lg-4 " (click)="DateOrder()">
-                                        <p class="m-0 p-0 row d-flex justify-content-center align-items-center">{{dateOrder}} <span class="ml-4 m-0 p-0 d-flex flex-column"><i class="m-0 p-0 fa fa-caret-up"></i><i class="m-0 p-0 fa fa-caret-down"></i></span></p>
+                                    <button type="button" name="last-modified" class="my-1 p-0 form-control btn btn-info col-sm-4 col-md-4 col-lg-4 " (click)="DateOrderEmailTransaction()">
+                                        <p class="m-0 p-0 row d-flex justify-content-center align-items-center">{{dateOrder}} <span class="ml-4 m-0 p-0 d-flex flex-column"><i class="mb-0 m-0 p-0 fa fa-caret-up"></i><i class="mt-0 m-0 p-0 fa fa-caret-down"></i></span></p>
                                     </button>
-                                    <button type="button" name="last-modified" class="my-1 btn btn-info form-control col-sm-4 col-md-4 col-lg-4">
+                                    <button type="button" name="last-modified" class="my-1 btn btn-info form-control col-sm-4 col-md-4 col-lg-4" (click)="ResetEmailTransactionFilter()">
                                         Reset Filter
                                     <!-- <i [class]="sortClass" aria-hidden="true"></i> -->
                                 </button>
@@ -46,10 +47,8 @@
                                                     <span class="h5">
                                                         <span><span class="text-muted">{{dataItem.UpdatedOn}}</span></span>
                                                         <span class="ml-2 mr-2 text-muted">|</span>
-                                                        <span class="text-muted">SENT</span>
-                                                        <span *ngIf="dataItem.EmailTo=='John Pattinson'" class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-received.svg" width="20px" height="20px" alt=""></span>
-                                                        <span *ngIf="dataItem.EmailFrom=='John Pattinson'" class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-sent.svg" width="20px" height="20px" alt=""></span>
-                                                        <span type="button" *ngIf="dataItem.EmailTo=='John Pattinson' && dataItem.EmailFrom!='Sytem'" class="ml-2 mb-2 py-0 btn btn-info btn-sm">Reply</span>
+                                                        <span *ngIf="dataItem.EmailTo=='John Pattinson'"><span class="text-muted">RECEIVED</span><span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-received.svg" width="20px" height="20px" alt=""></span></span>
+                                                        <span *ngIf="dataItem.EmailFrom=='John Pattinson'"><span class="text-muted">SENT</span><span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-sent.svg" width="20px" height="20px" alt=""></span></span><span type="button" *ngIf="dataItem.EmailTo=='John Pattinson' && dataItem.EmailFrom!='Sytem'" class="ml-2 mb-2 py-0 btn btn-info btn-sm">Reply</span>
                                                     </span>
                                                 </div>
                                                 <div class="d-flex flex-wrap"> <!--m-0 p-0 col-lg-6 col-xsm-12 justify-content-start -->
