--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -20,15 +20,22 @@
                                 </div>
                                 <div class="section-body"  > <!-- *ngIf="emailTransactions" -->
                                     <ul class="m-0 p-0">  <!-- class="custom-list dashboard-list" -->
-                                        <li  class="my-1" type="none"> <!-- *ngFor="let emailTransaction of emailTransactions" type="none" -->
-                                             <span class="truncated"><span class="mr-2"><img src="../../../assets/images/create-report.svg" width="25px;" height="50px;" alt="email"></span><span><span class="font-weight-bold">{{"emailTransactionEmailSubject" | uppercase}}</span><span class="ml-1 mr-2">|</span><span class="text-muted">{{"emailTransaction.EmailMessage"}}{{"emailTransaction.EmailMessage"}}{{"emailTransaction.EmailMessage"}}{{"emailTransaction.EmailMessage"}}</span></span></span>
+                                        <li  class="my-1 py-1" *ngFor="let emailTransaction of emailTransactions" type="none">
+                                             <span class="truncated">
+                                                 <span class="mr-2" *ngIf="emailTransaction.EmailFrom=='John Pattinson'"><img src="../../../assets/images/message-sent.svg" width="25px;" height="50px;" alt="email"></span>
+                                                 <span class="mr-2" *ngIf="emailTransaction.EmailTo=='John Pattinson'"><img src="../../../assets/images/message-received.svg" width="25px;" height="50px;" alt="email"></span>
+                                                <span>
+                                                    <span class="font-weight-bold">{{emailTransaction.EmailSubject | uppercase}}</span><span class="ml-1 mr-2">|</span>
+                                                    <span class="text-muted">{{emailTransaction.EmailMessage}}</span>
+                                                </span>
+                                            </span>
                                         </li>  <!-- [appHtml]="emailTransaction.emailSubject" --> 
                                     </ul>
                                             <!-- <ul class="custom-list" *ngFor="let recentActivity of recentActivities">
                                     <li><h6>{{recentActivity.RecentActivityName}}</h6></li>
                                 </ul> -->
                                 </div>
-                                <div class="section-footer text-right" > <!-- *ngIf="emailTransactions" -->
+                                <div class="section-footer text-right" *ngIf="emailTransactions">
                                     <a class="btn btn-info" (click)="navigateTo('email-transaction')"
                                         title="Read More"><i class="fa fa-angle-double-right fa-lg"></i></a>
                                 </div>
