--- a/redsheet-portal/src/app/components/dashboard/dashboard.component.html
+++ b/redsheet-portal/src/app/components/dashboard/dashboard.component.html
@@ -14,14 +14,14 @@
                     <hr>
                     <div class="row">
                         <div class="col-12 col-lg-6">
-                            <div class="section-box" style="background-color: white; height:450px; overflow-y: scroll;">
+                            <div class="section-box" style="background-color: white; height:480px; overflow-y: scroll;">
                                 <div class="section-header">
                                     <h2 class="section-title" Uppercase>Messages</h2> <!-- rxLabel="headingOne" -->
                                 </div>
                                 <div class="section-body"  > <!-- *ngIf="emailTransactions" -->
                                     <ul class="m-0 p-0">  <!-- class="custom-list dashboard-list" -->
-                                        <li  class="my-1 py-1" *ngFor="let emailTransaction of emailTransactions" type="none">
-                                             <span class="truncated">
+                                        <li  class="my-1 py-1" *ngFor="let emailTransaction of emailTransactions index as i" type="none">
+                                             <span class="truncated" *ngIf="i<=10">
                                                  <span class="mr-2" *ngIf="emailTransaction.EmailFrom=='John Pattinson'"><img src="../../../assets/images/message-sent.svg" width="25px;" height="50px;" alt="email"></span>
                                                  <span class="mr-2" *ngIf="emailTransaction.EmailTo=='John Pattinson'"><img src="../../../assets/images/message-received.svg" width="25px;" height="50px;" alt="email"></span>
                                                 <span>
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
-                            <div class="section-box" style="background-color: white; height:450px; overflow-y: scroll;">
+                            <div class="section-box" style="background-color: white; height:480px; overflow-y: scroll;">
                                 <div class="section-header">
                                     <h2 class="section-title" rxLabel="headingTwo"></h2>
                                 </div>
