--- a/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
+++ b/redsheet-portal/src/app/components/email-transaction/list/email-transaction-list.component.html
@@ -9,20 +9,20 @@
                 <div class="row justify-content-between align-items-center">                        
                         <div class="my-1 row col-sm-12 col-md-12 col-lg-4 justify-content-start align-items-center">                                
                             <label for="project-name" class="my-1 col-sm-auto col-md-2 col-lg-auto h2">Search</label>
-                            <input type="text" class="my-1 form-control col-sm-7 col-md-8 col-lg-7" placeholder="Text here.." [(ngModel)]="searchValue" (keyup)="SearchEmailTransaction()">    
+                            <input type="text" class="my-1 form-control bg-white rounded col-sm-7 col-md-8 col-lg-7 text-dark h4" placeholder="Text here.." [(ngModel)]="searchValue" (keyup)="SearchEmailTransaction()">    
                         </div>
                         <div class="my-1 row col-sm-12 col-md-12 col-lg-8 justify-content-center align-items-center">   
                             <label for="project-name" class="my-1 col-sm-auto col-md-auto col-lg-auto h2">Filter</label>
                             <div class="col-sm-10 col-md-10 col-lg-10 row justify-content-around">
                                 <div class="col-12 row justify-content-around d-flex flex-wrap float-right">
-                                    <select class="my-1 form-control col-sm-3 col-md-3 col-lg-3" [(ngModel)]="emailCategoryValue" (change)="CategoryEmailTransaction()">
+                                    <select class="my-1 form-control form-control-lg rounded col-sm-3 col-md-3 col-lg-3 text-secondary h4" [(ngModel)]="emailCategoryValue" (change)="CategoryEmailTransaction()">
                                         <option value=""></option>
-                                        <option *ngFor="let filter of emailCategory" value="{{filter}}">{{filter}}</option>
+                                        <option class="h4" *ngFor="let filter of emailCategory" value="{{filter}}">{{filter}}</option>
                                     </select>
-                                    <button type="button" name="last-modified" class="my-1 p-0 form-control btn btn-info col-sm-4 col-md-4 col-lg-4 " (click)="DateOrderEmailTransaction()">
-                                        <p class="m-0 p-0 row d-flex justify-content-center align-items-center">{{dateOrder}} <span class="ml-4 m-0 p-0 d-flex flex-column"><i class="mb-0 m-0 p-0 fa fa-caret-up"></i><i class="mt-0 m-0 p-0 fa fa-caret-down"></i></span></p>
+                                    <button type="button" name="last-modified" class="my-1 p-0 bg-secondary rounded col-sm-4 col-md-4 col-lg-4 " (click)="DateOrderEmailTransaction()">
+                                        <p class="m-0 p-0 row d-flex justify-content-center align-items-center text-light h4">{{dateOrder}} <span class="ml-4 m-0 p-0 d-flex flex-column"><i class="m-0 p-0 fa fa-caret-up"></i><i class="m-0 p-0 fa fa-caret-down"></i></span></p>
                                     </button>
-                                    <button type="button" name="last-modified" class="my-1 btn btn-info form-control col-sm-4 col-md-4 col-lg-4" (click)="ResetEmailTransactionFilter()">
+                                    <button type="button" name="last-modified" class="my-1 bg-secondary rounded col-sm-4 col-md-4 col-lg-4 text-light h4" (click)="ResetEmailTransactionFilter()">
                                         Reset Filter
                                     <!-- <i [class]="sortClass" aria-hidden="true"></i> -->
                                 </button>
@@ -50,6 +50,17 @@
                                                         <span *ngIf="dataItem.EmailStatus=='RECEIVED' || (dataItem.EmailStatus=='SENT' && dataItem.EmailTo==data.userName)"><span class="text-muted">RECEIVED</span><span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-received.svg" width="20px" height="20px" alt=""></span></span>
                                                         <span *ngIf="dataItem.EmailStatus=='SENT' && dataItem.EmailTo!=data.userName"><span class="text-muted">SENT</span><span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-sent.svg" width="20px" height="20px" alt=""></span></span>
                                                         <span type="button" *ngIf="(dataItem.EmailStatus=='RECEIVED' || (dataItem.EmailStatus=='SENT' && dataItem.EmailTo==data.userName)) && !dataItem.IsSystemGenerated" class="ml-2 mb-2 py-0 btn btn-info btn-sm">Reply</span>
+                                                        <span *ngIf="dataItem.EmailTo=='John Pattinson'">
+                                                            <span class="text-muted">RECEIVED</span>
+                                                                <span class="ml-2"><img class="mb-2 m-0" src="../../../../assets/images/message-received.svg" width="20px" height="20px" alt="">
+                                                            </span>
+                                                        </span>
+                                                        <span *ngIf="dataItem.EmailFrom=='John Pattinson'">
+                                                            <span class="text-muted">SENT</span><span class="ml-2">
+                                                                <img class="mb-2 m-0" src="../../../../assets/images/message-sent.svg" width="20px" height="20px" alt="">
+                                                            </span>
+                                                        </span>
+                                                        <span type="button" *ngIf="dataItem.EmailTo=='John Pattinson' && dataItem.EmailFrom!='System'" class="ml-2 mb-2 py-0 btn btn-info btn-sm" type="button" (click)="ReplyToEmail(dataItem)">Reply</span>
                                                     </span>
                                                 </div>
                                                 <div class="d-flex flex-wrap"> <!--m-0 p-0 col-lg-6 col-xsm-12 justify-content-start -->
